# Thera-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  PerformanceStats.csv  README.md  UCI Specs.txt  build-ref.sh  monitor.awk  monitor.sh  shell.nix  test.sh  tournament.sh
.github/workflows/: cmake.yml  rust.yml
CLI/: CMakeLists.txt
CLI/include/CLI/: IO.hpp  Options.hpp  perft.hpp  perftMode.hpp  playMode.hpp  popen2.hpp
CLI/src/: IO.cpp  main.cpp  perft.cpp  perftMode.cpp  playMode.cpp
ChessBot/: CMakeLists.txt
ChessBot/include/ChessBot/: Bitboard.hpp  Board.hpp  Move.hpp  MoveGenerator.hpp  Piece.hpp  Utils.hpp
ChessBot/include/ChessBot/Utils/: Architecture.hpp  Bits.hpp  BuildType.hpp  ChessTerms.hpp  Coordinates.hpp  Math.hpp  ScopeGuard.hpp
ChessBot/src/: Bitboard.cpp  Board.cpp  ChessTerms.cpp  Move.cpp  MoveGenerator.cpp  Piece.cpp  Utils.cpp
Thera/: .gitignore  CMakeLists.txt
Thera/include/Thera/: Bitboard.hpp  Board.hpp  Coordinate.hpp  Move.hpp  MoveGenerator.hpp  Piece.hpp  TemporyryCoordinateTypes.hpp  TranspositionTable.hpp  perft.hpp  search.hpp
Thera/include/Thera/Utils/: Architecture.hpp  Bits.hpp  BuildType.hpp  ChessTerms.hpp  Coordinates.hpp  GitInfo.hpp  Math.hpp  ScopeGuard.hpp  exceptions.hpp
Thera/src/: Bitboard.cpp  BitboardForceCompile.ipp  Board.cpp  ChessTerms.cpp  Move.cpp  MoveGenerator.cpp  TranspositionTable.cpp  perft.cpp  search.cpp
Thera/src/Utils/: GitInfo.cpp
UCI/: CMakeLists.txt
UCI/include/TheraUCI/: MultiStream.hpp  stringUtils.hpp
UCI/src/: main.cpp
resources/: README.md  book-ply6-unifen_Q.txt
src/: alpha_beta_window.rs  ansi.rs  bitboard.rs  board.rs  centi_pawns.rs  color.rs  direction.rs  lib.rs  magic_bitboard.rs  main.rs  move_generator.rs  perft.rs  piece.rs  search.rs  square.rs  transposition_table.rs  typed_array.rs
tests/: CMakeLists.txt
tests/src/: perft_test_fen.cpp  test_bitboard1.cpp  test_perft_fen.cpp
tools/: gitHashExtract.py  gitHashExtract_template.ipp
